dev: event entity